// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PivotTable - Aggregators should render correctly 1`] = `
.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-11 {
  display: inline-block;
  margin-bottom: 0.5rem;
  margin-top: 0.5rem;
}

.emotion-11:first-of-type {
  margin-top: 0;
}

.emotion-11:last-of-type {
  margin-bottom: 0;
}

.emotion-11:empty {
  display: none;
}

.emotion-3 {
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  background-color: #FFFFFF;
  border: 1px solid #8F8FA2;
  border-radius: 100px;
  display: inline-block;
  height: 24px;
  position: relative;
  -webkit-transition: all .2s ease;
  transition: all .2s ease;
  vertical-align: middle;
  width: 24px;
}

.emotion-1:after {
  background-color: #FFFFFF;
  border: 5px solid #FFFFFF;
  border-radius: 100px;
  content: "";
  display: block;
  height: 2px;
  margin-left: 6px;
  margin-top: 6px;
  opacity: 0;
  text-align: center;
  -webkit-transition: all .2s ease;
  transition: all .2s ease;
  width: 2px;
}

.emotion-2 {
  margin-left: 0.5rem;
}

.emotion-0 {
  opacity: 0;
  margin-right: -13px;
}

.emotion-0:hover + .emotion-1 {
  border-color: #7A7B8E;
}

.emotion-0:checked + .emotion-1 {
  background-color: #0069D0;
  border-color: #0069D0;
}

.emotion-0:checked + .emotion-1:after {
  opacity: 1;
}

.emotion-0:focus + .emotion-1 {
  box-shadow: 0 0 0 2px #F0F0F5,0 0 0 4px #0069D0;
}

.emotion-0:disabled + .emotion-1 {
  opacity: 0.4;
  cursor: not-allowed;
}

.emotion-0:disabled + .emotion-1 + .emotion-2 {
  color: #AAAAB9;
  cursor: not-allowed;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.emotion-4 {
  padding-top: 1rem;
  padding-left: 1rem;
  margin-bottom: 0.5rem;
  margin-right: 1rem;
}

<div>
  <div
    class="emotion-12"
  >
    <div
      class="emotion-11"
    >
      <div
        class="emotion-10"
      >
        <div
          class="emotion-4"
        >
          <label
            class="emotion-3"
          >
            <input
              checked=""
              class="emotion-0"
              name="aggregator"
              type="radio"
              value="0"
            />
            <span
              class="emotion-1"
            />
            <span
              class="emotion-2"
            >
              Count
            </span>
          </label>
        </div>
        <div
          class="emotion-4"
        >
          <label
            class="emotion-3"
          >
            <input
              class="emotion-0"
              name="aggregator"
              type="radio"
              value="1"
            />
            <span
              class="emotion-1"
            />
            <span
              class="emotion-2"
            >
              Percentage
            </span>
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PivotTable - Aggregators should render correctly with numberKeys 1`] = `
.emotion-27 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-26 {
  display: inline-block;
  margin-bottom: 0.5rem;
  margin-top: 0.5rem;
}

.emotion-26:first-of-type {
  margin-top: 0;
}

.emotion-26:last-of-type {
  margin-bottom: 0;
}

.emotion-26:empty {
  display: none;
}

.emotion-3 {
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  background-color: #FFFFFF;
  border: 1px solid #8F8FA2;
  border-radius: 100px;
  display: inline-block;
  height: 24px;
  position: relative;
  -webkit-transition: all .2s ease;
  transition: all .2s ease;
  vertical-align: middle;
  width: 24px;
}

.emotion-1:after {
  background-color: #FFFFFF;
  border: 5px solid #FFFFFF;
  border-radius: 100px;
  content: "";
  display: block;
  height: 2px;
  margin-left: 6px;
  margin-top: 6px;
  opacity: 0;
  text-align: center;
  -webkit-transition: all .2s ease;
  transition: all .2s ease;
  width: 2px;
}

.emotion-2 {
  margin-left: 0.5rem;
}

.emotion-0 {
  opacity: 0;
  margin-right: -13px;
}

.emotion-0:hover + .emotion-1 {
  border-color: #7A7B8E;
}

.emotion-0:checked + .emotion-1 {
  background-color: #0069D0;
  border-color: #0069D0;
}

.emotion-0:checked + .emotion-1:after {
  opacity: 1;
}

.emotion-0:focus + .emotion-1 {
  box-shadow: 0 0 0 2px #F0F0F5,0 0 0 4px #0069D0;
}

.emotion-0:disabled + .emotion-1 {
  opacity: 0.4;
  cursor: not-allowed;
}

.emotion-0:disabled + .emotion-1 + .emotion-2 {
  color: #AAAAB9;
  cursor: not-allowed;
}

.emotion-25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.emotion-4 {
  padding-top: 1rem;
  padding-left: 1rem;
  margin-bottom: 0.5rem;
  margin-right: 1rem;
}

<div>
  <div
    class="emotion-27"
  >
    <div
      class="emotion-26"
    >
      <div
        class="emotion-25"
      >
        <div
          class="emotion-4"
        >
          <label
            class="emotion-3"
          >
            <input
              checked=""
              class="emotion-0"
              name="aggregator"
              type="radio"
              value="0"
            />
            <span
              class="emotion-1"
            />
            <span
              class="emotion-2"
            >
              Count
            </span>
          </label>
        </div>
        <div
          class="emotion-4"
        >
          <label
            class="emotion-3"
          >
            <input
              class="emotion-0"
              name="aggregator"
              type="radio"
              value="1"
            />
            <span
              class="emotion-1"
            />
            <span
              class="emotion-2"
            >
              Percentage
            </span>
          </label>
        </div>
        <div
          class="emotion-4"
        >
          <label
            class="emotion-3"
          >
            <input
              class="emotion-0"
              name="aggregator"
              type="radio"
              value="2"
            />
            <span
              class="emotion-1"
            />
            <span
              class="emotion-2"
            >
              Average
            </span>
          </label>
        </div>
        <div
          class="emotion-4"
        >
          <label
            class="emotion-3"
          >
            <input
              class="emotion-0"
              name="aggregator"
              type="radio"
              value="3"
            />
            <span
              class="emotion-1"
            />
            <span
              class="emotion-2"
            >
              Maximum
            </span>
          </label>
        </div>
        <div
          class="emotion-4"
        >
          <label
            class="emotion-3"
          >
            <input
              class="emotion-0"
              name="aggregator"
              type="radio"
              value="4"
            />
            <span
              class="emotion-1"
            />
            <span
              class="emotion-2"
            >
              Minimum
            </span>
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;
